# advanced-deep-research

./: .gitignore  LICENSE  README.md  app.py  backend.Dockerfile  bases.py  docker-compose.yaml  download_cli.py  download_model.py  exceptions.py  frontend.Dockerfile  loggings.py  main.py  pyproject.toml  template.env
config/: __init__.py  environment.py
databases/: __init__.py  base.py  mongodb.py  qdrant.py
deep-searcher/: agent_deep_search.py  base.py
deep_searcher/: __init__.py  agent_deep_search.py  base.py
dockers/: backend.Dockerfile  frontend.Dockerfile
factory/: __init__.py  base.py  conversation.py
helpers/: __init__.py  parser_helper.py
llm/: __init__.py  _locally_call_api.py  base.py  callbacks.py  embeddings.py  llm.py  ollama_wrapper.py  openai_embedding.py  openai_llm.py  openai_wrapper.py  reranker.py  summarization.py  tools.py
management/: __init__.py  conversations.py
parsers/: __init__.py  base.py  crawl4ai_parser.py  crawl_engine.py  firecrawl_parser.py  pdf_parser.py  youtube_parser.py
prompt_engineering/: __init__.py  templates.py
prompts/: __init__.py  prompt_engineer.py  summarizer.py
researchers/: __init__.py  arxiv_search.py  base.py  brave_search.py  search_engine.py  semantic_search.py  tavily_search.py  youtube_search.py
schemas/: __init__.py  conversations_schema.py  embeddings_schema.py  generative_schema.py  reranker_schema.py  search_engine_schema.py  summarize_schema.py  tools_schema.py  vectordb_schema.py
server/: core.py  env.py  main.py  schemas.py
services/: __init__.py  arxiv_parser.py  base.py  google_search.py  semantic_search.py  youtube_search.py
test/: test_search_engines.py
tests/: test_deepsearcher.py  test_llm.py  test_parser.py  test_parsers.py  test_search_engines.py
utils/: __init__.py  arxiv_parser.py  http_request.py  pdf_parser.py  site_parser.py  web_parser.py  youtube_parser.py
