[project]
name = "resumidor"
version = "0.1.0"
description = ""
authors = [
    {name = "Protons"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "streamlit (>=1.44.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openai (>=1.69.0,<2.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "langchain (>=0.3.22,<0.4.0)",
    "langchain-openai (>=0.3.11,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
